--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,11 +4,11 @@
     <form [formGroup]="loginForm">
       <h1>LOGIN</h1>
       <ion-item>
-        <ion-label>Username</ion-label>
+        <ion-label>Correo</ion-label>
         <ion-input type="text" formControlName="email"></ion-input>
       </ion-item>
       <ion-item> 
-        <ion-label>Password</ion-label>
+        <ion-label>Contraseña</ion-label>
         <ion-input type="password" formControlName="password"></ion-input>
       </ion-item>
       
