--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,49 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+<ion-header>
+  <div class="search-container">
+    <ion-icon name="search"></ion-icon>
+    <input name="search" placeholder="¿Qué buscas?" />
+  </div>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <h1 class="simple-title">SERVICIOS</h1>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <!-- Colors -->
+<ion-button color="primary" expand="full">Primary</ion-button>
+<ion-button color="secondary" expand="block">Secondary</ion-button>
+<ion-button color="tertiary" shape="round">Tertiary</ion-button>
+<ion-button color="success" expand="full" fill="outline">Success</ion-button>
+<ion-button color="warning" size="large">Warning</ion-button>
+<ion-button color="danger" size="small">Danger</ion-button>
+<ion-button color="light" expand="full">Light</ion-button>
+<ion-button color="medium" expand="full" >Medium</ion-button>
+<ion-button color="dark"expand="full" >Dark</ion-button>
+
+
+  <ion-card>
+    <ion-card-content>
+        <ion-card-title>LIMPIEZA</ion-card-title>
+        <ion-button size="large" class="icon-btn" (click)="seeList()">
+            <ion-icon name="calendar"></ion-icon>
+        </ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content>
+        <ion-card-title>LIMPIEZA</ion-card-title>
+        <ion-button size="large" class="icon-btn" (click)="seeList()">
+            <ion-icon name="calendar"></ion-icon>
+        </ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content>
+        <ion-card-title>LIMPIEZA</ion-card-title>
+        <ion-button size="large" class="icon-btn" (click)="seeList()">
+            <ion-icon name="calendar"></ion-icon>
+        </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
