--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,43 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+// Header and searchbar 
+ion-header {
+  padding: 10px 0;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.search-container {
+  width: 90%;
+  margin: 0 auto;
+  box-shadow: 0 0px 15px #d5d5d5;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  padding: 15px 20px;
+  input {
+    border: none;
+    box-shadow: none;
+    font-size: 1.1rem;
+    margin: 0 10px;
+    width: 100%;
+    &:focus {
+      outline-width: 0;
+    }
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+// End header and searchbar 
 
-  color: #8c8c8c;
 
-  margin: 0;
+ion-card {
+  background-color: white;
 }
 
-#container a {
-  text-decoration: none;
+
+ion-item.searchbar{
+  width: 90%;
+  margin: 5px auto;
+  box-shadow: 0 0px 15px #d5d5d5;
+  border-radius: 25px;
+  .label-fixed.sc-ion-label-ios-h {
+    width: 50px;
+    min-width: 50px;
+  }
 }
