--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,19 +14,19 @@ $colors: (
 :root {
   /** primary **/
   --ion-color-primary: #01968B;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary-rgb: 1, 150, 139;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #00756d;
+  --ion-color-primary-tint: #00b5a8;
 
   /** secondary **/
   --ion-color-secondary: #002443;
-  --ion-color-secondary-rgb: 61, 194, 255;
+  --ion-color-secondary-rgb: 0, 36, 67;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-shade: #001629;
+  --ion-color-secondary-tint: #01447d;
 
   /** tertiary **/
   --ion-color-tertiary: #34D1CC;
@@ -92,19 +92,19 @@ $colors: (
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    --ion-color-primary: #01968B;
+    --ion-color-primary-rgb: 1, 150, 139;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #00756d;
+    --ion-color-primary-tint: #00b5a8;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
+    --ion-color-secondary: #002443;
+    --ion-color-secondary-rgb: 0, 36, 67;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-shade: #001629;
+    --ion-color-secondary-tint: #01447d;
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106,100,255;
@@ -270,25 +270,19 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
-
-$gray: #777777;
+// Grays
+$black:   #000000;
+$gray-12: #23292d;
+$gray-24: #32343f;
+$gray-48: #647178;
+$gray-64: #939da2;
+$gray-80: #c1c7cb;
+$gray-88: #d9dde0;
+$gray-96: #f1f4f6;
+$white:   #ffffff;
 
 
 @font-face {
   font-family: 'Roboto';
   src: url('../assets/fonts/Roboto-Regular.ttf');//mine
-}
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: normal;
-  src: url('../assets/fonts/Roboto-Regular.ttf');
-}
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: bold;
-  src: url('../assets/fonts/Roboto-Bold.ttf');
 }
