Logout funciona y router no regresa a páginas anteriores

--- a/src/app/agenda-steps/agenda-steps.page.html
+++ b/src/app/agenda-steps/agenda-steps.page.html
@@ -73,7 +73,7 @@
         <p>Perfil</p>
       </button>
 
-      <button class="icon-button" expand="block" color="primary" click="logout()">
+      <button class="icon-button" expand="block" color="primary" (click)="logout()">
         <ion-icon name="log-out-outline"></ion-icon>
         <p>Cerrar sesión</p>
       </button>
