--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,8 +1,7 @@
 <ion-content padding>
   <div class="cover">
-    <img class="logo" src="../../assets/imgs/home.png" />
+    <img class="logo" src="../../assets/imgs/beetrim.png" />
     <form [formGroup]="registerForm">
-      <h1>Beetrim</h1>
       <ion-item>
         <ion-label>Correo</ion-label>
         <ion-input type="text" formControlName="email"></ion-input>
