--- a/src/app/agenda-steps/agenda-steps.page.scss
+++ b/src/app/agenda-steps/agenda-steps.page.scss
@@ -56,8 +56,8 @@ button.back-button {
             }
 
             span.circle {
-                border: 1px solid var(--ion-color-primary);
-                color: var(--ion-color-primary);
+                border: 1px solid var(--ion-color-secondary);
+                color: var(--ion-color-secondary);
                 font-family: 'Helvetica';
                 font-size: 25px;
                 width: 35px;
@@ -72,8 +72,8 @@ button.back-button {
         }
         button.step.active {
             span.circle {
-                background-color: var(--ion-color-primary);
-                color: var(--ion-color-primary-contrast);
+                background-color: var(--ion-color-secondary);
+                color: var(--ion-color-secondary-contrast);
             }
         }
         
@@ -118,13 +118,13 @@ ion-slides {
     button.icon-button {
         width: 100%;
         color: var(--ion-color-primary);
-        background: var(--ion-color-primary-contrast);
+        background: white;
         font-size: 25px;
         padding: 10px 0;
         p {
             margin: 0;
             font-size: 14px;
-            color: var(--ion-color-step-400);
+            color: var(--ion-color-primary-contrast);
         }
     }
 }
