--- a/src/app/agenda-steps/step-horario/step-horario.component.scss
+++ b/src/app/agenda-steps/step-horario/step-horario.component.scss
@@ -7,8 +7,8 @@
         font-family: "Roboto", "Helvetica Neue", sans-serif;
     }
     .header-buttons {
-        background-color: #002443;
-        color: #FFF;
+        background-color: var(--ion-color-dark);
+        color: var(--ion-color-dark-contrast);
         margin-bottom: 0;
         padding: 5px 15px;
         text-align: left;
@@ -25,8 +25,8 @@
             padding: 10px 5px;
 
             &.active {
-                background-color: rgb(1,150,139);
-                color: white;
+                background-color: var(--ion-color-secondary);
+                color: var(--ion-color-secondary-contrast);
             }
 
             ion-icon {
