--- a/src/app/agenda-steps/step-lugar/step-lugar.component.scss
+++ b/src/app/agenda-steps/step-lugar/step-lugar.component.scss
@@ -30,8 +30,8 @@ app-step-lugar {
         font-family: "Roboto", "Helvetica Neue", sans-serif;
     }
     .header-buttons {
-        background-color: #002443;
-        color: #FFF;
+        background-color: var(--ion-color-dark);
+        color: white;
         margin-bottom: 0;
         padding: 5px 15px;
         text-align: left;
