--- a/src/app/agenda-steps/step-periodo/step-periodo.component.scss
+++ b/src/app/agenda-steps/step-periodo/step-periodo.component.scss
@@ -7,7 +7,7 @@
         font-family: "Roboto", "Helvetica Neue", sans-serif;
     }
     .header-buttons {
-        background-color: #002443;
+        background-color: var(--ion-color-dark);
         color: #FFF;
         margin-bottom: 0;
         padding: 5px 15px;
@@ -24,8 +24,8 @@
             padding: 20px 5px;
 
             &.active {
-                background-color: rgb(1,150,139);
-                color: white;
+                background-color: var(--ion-color-secondary);
+                color: var(--ion-color-secondary-contrast);
             }
 
             ion-icon {
