--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -47,3 +47,29 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <div class="footer-menu">
+      <button class="icon-button active" expand="block" color="primary" (click)="goToHome()">
+        <ion-icon name="home-outline"></ion-icon>
+        <p>Inicio</p>
+      </button>
+
+      <button class="icon-button" expand="block" color="primary" (click)="goToAgenda()">
+        <ion-icon name="calendar-outline"></ion-icon>
+        <p>Agenda</p>
+      </button>
+
+      <button class="icon-button" expand="block" color="primary" (click)="goToPerfil()">
+        <ion-icon name="person-circle-outline"></ion-icon>
+        <p>Perfil</p>
+      </button>
+
+      <button class="icon-button" expand="block" color="primary" (click)="logout()">
+        <ion-icon name="log-out-outline"></ion-icon>
+        <p>Cerrar sesión</p>
+      </button>
+    </div>
+  </ion-toolbar>
+</ion-footer>
