--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -41,3 +41,34 @@ ion-item.searchbar{
     min-width: 50px;
   }
 }
+
+.footer-menu {
+  display: flex;
+  justify-content: space-between;
+  button.icon-button {
+      width: 100%;
+      color: var(--ion-color-secondary);
+      background: white;
+      font-size: 25px;
+      padding: 10px 0;
+      ion-icon {
+        color: var(--ion-color-secondary);
+        border: 2px solid var(--ion-color-secondary);
+        padding: 8px;
+        margin-bottom: 5px;
+        border-radius: 50%;
+      }
+      p {
+          margin: 0;
+          font-size: 14px;
+          color: var(--ion-color-secondary);
+      }
+
+    &.active {
+      ion-icon {
+        background-color: var(--ion-color-secondary);
+        color: var(--ion-color-secondary-contrast);
+      }
+    }
+  }
+}
