--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,29 +4,29 @@
 /** Ionic CSS Variables **/
 
 $colors: (
-  primary:    #01968B,
-  secondary:  #002443,
+  primary:    #FBB904,
+  secondary:  #2EC3B5,
   third:      #34D1CC,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #171219
 );
 :root {
   /** primary **/
-  --ion-color-primary: #01968B;
-  --ion-color-primary-rgb: 1, 150, 139;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #00756d;
-  --ion-color-primary-tint: #00b5a8;
+  --ion-color-primary: #FBB904;
+  --ion-color-primary-rgb: 252, 194, 34;
+  --ion-color-primary-contrast: #171219;
+  --ion-color-primary-contrast-rgb: 23, 18, 25;
+  --ion-color-primary-shade: #e8aa00;
+  --ion-color-primary-tint: #fccd4a;
 
   /** secondary **/
-  --ion-color-secondary: #002443;
-  --ion-color-secondary-rgb: 0, 36, 67;
+  --ion-color-secondary: #2EC3B5;
+  --ion-color-secondary-rgb: 57, 208, 193;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #001629;
-  --ion-color-secondary-tint: #01447d;
+  --ion-color-secondary-shade: #2bbaac;
+  --ion-color-secondary-tint: #5AD8CC;
 
   /** tertiary **/
   --ion-color-tertiary: #34D1CC;
@@ -61,8 +61,8 @@ $colors: (
   --ion-color-danger-tint: #ed576b;
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
+  --ion-color-dark: #171219;
+  --ion-color-dark-rgb: 23, 18, 25;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1e2023;
