agendar cita con resumen y mapa

--- a/src/app/agenda-steps/agenda-steps.page.html
+++ b/src/app/agenda-steps/agenda-steps.page.html
@@ -63,6 +63,11 @@
 <ion-footer>
   <ion-toolbar>
     <div class="footer-menu">
+      <button class="icon-button active" expand="block" color="primary" (click)="goHome()">
+        <ion-icon name="home-outline"></ion-icon>
+        <p>Inicio</p>
+      </button>
+
       <button class="icon-button" expand="block" color="primary" (click)="goToAgenda()">
         <ion-icon name="calendar-outline"></ion-icon>
         <p>Agenda</p>
