--- a/src/app/agenda-steps/step-lugar/step-lugar.component.html
+++ b/src/app/agenda-steps/step-lugar/step-lugar.component.html
@@ -1,7 +1,7 @@
 <div class="wrap">
     <h4>¿En dónde necesita el servicio?</h4>
 
-    <h5 class="header-buttons">Ingrese la ciudad en la que vive</h5>
+    <h5 class="header-buttons">Ingrese su dirección</h5>
     <div class="search-container">
         <ion-icon name="search"></ion-icon>
         <input [(ngModel)]="lugar" name="lugar" placeholder="Buscar"/>
