--- a/src/app/agenda-steps/step-periodo/step-periodo.component.html
+++ b/src/app/agenda-steps/step-periodo/step-periodo.component.html
@@ -12,7 +12,7 @@
       <p>Cada 15 días</p>
     </button>
 
-    <button class="step" [ngClass]="{'active': frecuencia == 'unica'}" (click)="changeFrec('unica')">
+    <button class="step" [ngClass]="{'active': frecuencia == 'una vez'}" (click)="changeFrec('una vez')">
       <ion-icon name="calendar"></ion-icon>
       <p>Una vez</p>
     </button>
