Feat( se actualizó agenda para que tome la información de la base de datos)

--- a/src/app/agenda/reserva/reserva.component.html
+++ b/src/app/agenda/reserva/reserva.component.html
@@ -2,32 +2,16 @@
   
   <h1>AGOSTO</h1>
 
-  <div class="reserva">  
+  <div *ngFor="let agenda of agendas"class="reserva">  
     <div class="fecha">
-      <h2>5</h2>
-      <h3>AGO</h3>
+      <h2>{{agenda.fecha | date:'dd'}}</h2>
+      <h2>{{agenda.fecha | date:'MMM'}}</h2>
     </div>
     <div class="informacion">
       <p>Limpieza</p>
         <ion-card-subtitle>
           <ion-label>
-            16:00-17:00
-            <ion-icon name="time-outline" class="star-icon" slot="end"></ion-icon>
-          </ion-label>
-        </ion-card-subtitle>
-    </div>
-  </div>
-
-  <div class="reserva">  
-    <div class="fecha">
-      <h2>14</h2>
-      <h3>AGO</h3>
-    </div>
-    <div class="informacion">
-      <p>Limpieza</p>
-        <ion-card-subtitle>
-          <ion-label>
-            12:00-15:00
+            {{agenda.hora_inicial}} - {{agenda.hora_final}} 
             <ion-icon name="time-outline" class="star-icon" slot="end"></ion-icon>
           </ion-label>
         </ion-card-subtitle>
