Feat(se importo componente avatar componente mi-parfil)

--- a/src/app/mi-perfil/mi-perfil.page.html
+++ b/src/app/mi-perfil/mi-perfil.page.html
@@ -1,11 +1,7 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>mi-perfil</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="perfil">
+    <app-perfil-avatar [perfil]="perfil"></app-perfil-avatar>
+  </div>
 </ion-content>
 
 <app-menu [selectedTab]="'perfil'"></app-menu>
