Registro de perfil y datos guardados

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,7 +11,7 @@
 	h1 {
 		text-align: center;
 		font-weight: bold;
-		color: #FFF;
+		color: var(--ion-color-dark);
 		font-size: 2rem;
 		font-family: "Roboto";
 		text-transform: uppercase;
