--- a/src/app/resumen-cita/resumen-cita.page.html
+++ b/src/app/resumen-cita/resumen-cita.page.html
@@ -23,7 +23,7 @@
   </div>
 
 
-  <ion-button class="full-button" expand="full" color="primary">CONFIRMAR</ion-button> 
+  <ion-button class="full-button" expand="full" color="primary" (click)="confirmar()">CONFIRMAR</ion-button> 
 </ion-content>
 
 <ion-footer>
