--- a/src/app/mi-perfil/mi-perfil.page.html
+++ b/src/app/mi-perfil/mi-perfil.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>mi-perfil</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content padding>
+  <div class="cover">
+    <h1>Mi Perfil</h1>
+    <form [formGroup]="perfilForm">
+      <ion-item> 
+        <ion-label>Nombre</ion-label>
+        <ion-input type="text" formControlName="nombre"></ion-input>
+      </ion-item>
+      <ion-item> 
+        <ion-label>Apellidos</ion-label>
+        <ion-input type="text" formControlName="apellidos"></ion-input>
+      </ion-item>
+      <ion-item> 
+        <ion-label>Telefono</ion-label>
+        <ion-input type="text" formControlName="telefono"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Correo</ion-label>
+        <ion-input type="text" formControlName="email"></ion-input>
+      </ion-item>
+      
+      <ion-button (click)="onSubmit()" class="full-button" type="submit" expand="full" color="primary">REGISTRARME</ion-button>
 
-<ion-content>
-
+    </form>
+  </div>
 </ion-content>
