Cita guardada en firebase

--- a/src/app/resumen-cita/resumen-cita.page.scss
+++ b/src/app/resumen-cita/resumen-cita.page.scss
@@ -25,6 +25,7 @@ button.back-button {
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
+			text-transform: capitalize;
 			font-weight: 300;
 			&.bold {
 				font-weight:  bold;
