--- a/src/app/resumen-cita/resumen-cita.page.html
+++ b/src/app/resumen-cita/resumen-cita.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <div class="precio card">
-    <h4>{{appData.datosCita.periodo}} HRS</h4>
+    <h4>{{appData.datosCita.tiempo}} HRS</h4>
     <h4>$300 MXN</h4>
   </div>
 
