Feat(Se añadio componente perfil a agenda-steps)

--- a/src/app/agenda-steps/agenda-steps.page.html
+++ b/src/app/agenda-steps/agenda-steps.page.html
@@ -63,5 +63,10 @@
     <ion-slide>
       <app-step-extras (clickSwipe)="onSwipeEmitted($event)"></app-step-extras>
     </ion-slide>
+
+    <ion-slide>
+      <app-perfil (clickSwipe)="onSwipeEmitted($event)"></app-perfil>
+    </ion-slide>
+
   </ion-slides>
 </ion-content>
