Chore(Se agreagron ion-header a agenda y a mi perfil)

--- a/src/app/agenda/agenda.page.html
+++ b/src/app/agenda/agenda.page.html
@@ -1,3 +1,14 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <button class="back-button" (click)="goHome()">
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Agenda</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
   
   <div class='agenda'>
