--- a/src/app/mi-perfil/mi-perfil.page.html
+++ b/src/app/mi-perfil/mi-perfil.page.html
@@ -1,3 +1,14 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <button class="back-button" (click)="goHome()">
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Mi perfil</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content padding>
   <div class="perfil">
     <app-perfil-avatar [perfil]="perfil"></app-perfil-avatar>
