--- a/src/app/perfil/perfil/perfil.component.html
+++ b/src/app/perfil/perfil/perfil.component.html
@@ -1,5 +1,6 @@
 <div class="perfil">
     
+  <h2>Tu limpiador</h2>
   <div class="perfil">
     <app-perfil-avatar [perfil]="perfil"></app-perfil-avatar>
   </div>
@@ -7,5 +8,7 @@
   <div class="perfil">
     <app-perfil-resenas [idPerfil]="idPerfil"></app-perfil-resenas>
   </div> 
-  
+
+  <ion-button class="full-button" expand="full" color="primary"  (click)="nextSlide()">CONTINUAR</ion-button> 
+
 </div>
