Feat(Reserva): Se añadio detalles de la reserva y se cambiaron nombres de componentes

--- a/src/app/reserva/reserva-page/reserva.page.html
+++ b/src/app/reserva/reserva-page/reserva.page.html
@@ -5,7 +5,7 @@
         <ion-icon name="chevron-back-outline"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title>Agenda</ion-title>
+    <ion-title>Reservas</ion-title>
   </ion-toolbar>
 </ion-header>
 
