Feat(inicio): Se agregó nueva pagina de inicio

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,7 @@
 
       <button class="icon-button" expand="block" color="primary" (click)="goToAgenda()">
         <ion-icon name="calendar-outline"></ion-icon>
-        <p>Agenda</p>
+        <p>Reservas</p>
       </button>
 
       <button class="icon-button" expand="block" color="primary" (click)="goToPerfil()">
