--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -8,7 +8,7 @@
 
       <button class="icon-button" [ngClass]="{'active' : selectedTab === 'agenda'}" expand="block" color="primary" (click)="goToAgenda()">
         <ion-icon name="calendar-outline"></ion-icon>
-        <p>Agenda</p>
+        <p>Reservas</p>
       </button>
 
       <button class="icon-button" [ngClass]="{'active' : selectedTab === 'perfil'}" expand="block" color="primary" (click)="goToPerfil()">
