Fix( se separaron servicios y componente entre usuarios y beeworkers y se actualizaron nombres)

--- a/src/app/agenda-steps/agenda-steps.page.html
+++ b/src/app/agenda-steps/agenda-steps.page.html
@@ -65,7 +65,7 @@
     </ion-slide>
 
     <ion-slide>
-      <app-perfil (clickSwipe)="onSwipeEmitted($event)"></app-perfil>
+      <app-beeworker-perfil (clickSwipe)="onSwipeEmitted($event)"></app-beeworker-perfil >
     </ion-slide>
 
   </ion-slides>
