Feat( -Se añadió lista de beeworkers cercanos. -Se añadió calificación y estrellas desde bd -Se añadió opción de cambio de beeworker -Se añadió pantalla de detalles de reserva -Cambio de pantalla de información de beeworker )

--- a/src/app/agenda-steps/agenda-steps.page.html
+++ b/src/app/agenda-steps/agenda-steps.page.html
@@ -64,9 +64,9 @@
       <app-step-extras (clickSwipe)="onSwipeEmitted($event)"></app-step-extras>
     </ion-slide>
 
-    <ion-slide>
+    <!--<ion-slide>
       <app-beeworker-perfil (clickSwipe)="onSwipeEmitted($event)"></app-beeworker-perfil >
-    </ion-slide>
+    </ion-slide>-->
 
   </ion-slides>
 </ion-content>
