--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -23,7 +23,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card (click)="seeList()">
+  <!--<ion-card (click)="seeList()">
     <ion-card-content button="true">
       <ion-card-title align="center">NIÑERA</ion-card-title>
       <img
@@ -43,7 +43,7 @@
       <ion-icon name="card-outline"></ion-icon>
       Desde $250
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
 
   <!--<ion-card>
     <div class="jardineria">
