--- a/src/app/reserva/detalles-reserva/detalles-reserva.page.scss
+++ b/src/app/reserva/detalles-reserva/detalles-reserva.page.scss
@@ -10,3 +10,9 @@ h2{
     font-family: "Roboto";
     margin-left: 5px;
 }
+
+button.back-button {
+    background: transparent;
+    font-size: 22px;
+    color: var(--ion-color-primary);
+}
