--- a/src/app/beeworker/beeworker-actividades/beeworker-actividades.component.html
+++ b/src/app/beeworker/beeworker-actividades/beeworker-actividades.component.html
@@ -1,21 +1,23 @@
 <div class="perfil-actividades">
-      <ion-item class="ion-activated" color="primary">
-        <ion-icon name="checkmark-circle" slot="start"></ion-icon>
-        <ion-label>Limpieza de casa</ion-label>
-      </ion-item>
 
-      <ion-item class="ion-activated" color="primary">
-        <ion-icon name="checkmark-circle" slot="start"></ion-icon>
-        <ion-label>Limpieza de baño</ion-label>
-      </ion-item>
+  <div class="actividad">
+    <ion-icon name="checkmark-circle" ></ion-icon>
+    <h2>Limpieza de casa</h2>
+  </div>
+  
+  <div class="actividad">
+    <ion-icon name="checkmark-circle" slot="start"></ion-icon>
+    <h2>Limpieza de baño</h2>
+  </div>
+ 
+  <div class="actividad">
+    <ion-icon name="checkmark-circle" slot="start"></ion-icon>
+    <h2>Limpieza de azulejos</h2>
+  </div>
 
-      <ion-item class="ion-activated" color="primary">
-        <ion-icon name="checkmark-circle" slot="start"></ion-icon>
-        <ion-label>Limpieza de azulejos</ion-label>
-      </ion-item>
+  <div class="actividad">
+    <ion-icon name="checkmark-circle" slot="start"></ion-icon>
+    <h2>Limpieza de ventanas</h2>
+  </div>
 
-      <ion-item class="ion-activated" color="primary">
-        <ion-icon name="checkmark-circle" slot="start"></ion-icon>
-        <ion-label>Limpieza de ventanas</ion-label>
-      </ion-item>
 </div>
