--- a/src/app/beeworker/beeworker-actividades/beeworker-actividades.component.scss
+++ b/src/app/beeworker/beeworker-actividades/beeworker-actividades.component.scss
@@ -1,10 +1,24 @@
 .perfil-actividades {
 	background-color: white;
-	padding: 15px 10px;
-	align-items: center;
     justify-content: space-between;
 }
 
-.ion-activated{
-	margin: 5px;
+.actividad{
+	height: 20%;
+	width: 100%;
+	padding-left: 5%;
+	display: flex;
+	align-items: center;
+}
+
+ion-icon{
+	font-size: 200%;
+	color: var(--ion-color-secondary);  }
+
+h2{
+    color:black;
+    font-family: "Roboto";
+	font-size: 100%;
+	font-weight: bold;
+	margin-left: 15%;
 }
