--- a/src/app/beeworker/beeworker-avatar/beeworker-avatar.component.html
+++ b/src/app/beeworker/beeworker-avatar/beeworker-avatar.component.html
@@ -1,27 +1,47 @@
-  <div class="perfil-avatar">
+<h1>Tu beeworker</h1>
 
-    <ion-avatar *ngIf="perfil.foto" slot="end">
-      <ion-img [src]="perfil.foto"></ion-img>
-    </ion-avatar>
+<div (click)="detallesBeeworker()" class="perfil-avatar">
 
-    <ion-avatar *ngIf="!perfil.foto" slot="end">
-      <ion-img [src]="sinFotoUrl"></ion-img>    
-    </ion-avatar>
+  <ion-avatar *ngIf="beeworker.foto" slot="end">
+    <ion-img [src]="beeworker.foto"></ion-img>
+  </ion-avatar>
 
-    <div class="personal-info">
-      <h2>{{perfil.nombre}} {{perfil.apellidoPat}} {{perfil.apellidoMat}}</h2>
-      <div>
-        <ion-label>
-          <ion-icon name="star-sharp" class="star-icon" slot="end"></ion-icon>
-          <ion-icon name="star-sharp" class="star-icon" slot="end"></ion-icon>
-          <ion-icon name="star-sharp" class="star-icon" slot="end"></ion-icon>
-          <ion-icon name="star-sharp" class="star-icon" slot="end"></ion-icon>
-          <ion-icon name="star-half-outline"></ion-icon>
-        </ion-label>
-        4.8/5 (15)
-      </div>
-      <p>{{perfil.descripcion}}</p>
+  <ion-avatar *ngIf="!beeworker.foto" slot="end">
+    <ion-img [src]="sinFotoUrl"></ion-img>
+  </ion-avatar>
+
+  <div class="personal-info">
+
+    <h2>{{beeworker.nombre}} {{beeworker.apellidoPat}} {{beeworker.apellidoMat}}</h2>
+
+    <div>
+      <ion-label>
+        <ion-icon *ngIf="beeworker.calificacion > 0 && beeworker.calificacion<1" name="star-half-outline"
+          class="star-icon" slot="end"></ion-icon>
+        <ion-icon *ngIf="beeworker.calificacion >= 1" name="star-sharp" class="star-icon" slot="end"></ion-icon>
+        
+        <ion-icon *ngIf="beeworker.calificacion > 1 && beeworker.calificacion<2" name="star-half-outline"
+          class="star-icon" slot="end"></ion-icon>
+        <ion-icon *ngIf="beeworker.calificacion >= 2" name="star-sharp" class="star-icon" slot="end"></ion-icon>
+               
+        <ion-icon *ngIf="beeworker.calificacion > 2 && beeworker.calificacion<3" name="star-half-outline"
+          class="star-icon" slot="end"></ion-icon>
+        <ion-icon *ngIf="beeworker.calificacion >= 3" name="star-sharp" class="star-icon" slot="end"></ion-icon>
+       
+        <ion-icon *ngIf="beeworker.calificacion > 3 && beeworker.calificacion<4" name="star-half-outline"
+          class="star-icon" slot="end"></ion-icon>
+        <ion-icon *ngIf="beeworker.calificacion >= 4" name="star-sharp" class="star-icon" slot="end"></ion-icon>
+              
+        <ion-icon *ngIf="beeworker.calificacion > 4 && beeworker.calificacion<5" name="star-half-outline"
+          class="star-icon" slot="end"></ion-icon>
+        <ion-icon *ngIf="beeworker.calificacion >= 5" name="star-sharp" class="star-icon" slot="end"></ion-icon>
+
+      </ion-label>
+      {{beeworker.calificacion}}/5
     </div>
 
-    
   </div>
+
+  <ion-icon name="chevron-forward-outline" class="flecha-icon" slot="end"></ion-icon>
+
+</div>
