--- a/src/app/beeworker/beeworker.page.scss
+++ b/src/app/beeworker/beeworker.page.scss
@@ -1,4 +1,34 @@
-.perfil{
-    background-color: white;
-    border-bottom: 1px solid gray;
+.perfil {
+  background-color: white;
+  border-bottom: 1px solid gray;
+}
+
+button.back-button {
+  background: transparent;
+  font-size: 22px;
+  color: var(--ion-color-primary);
+}
+
+.botones {
+  text-align: center;
+  position: relative;
+  padding: 16px;
+
+  .full-button.ion-color-primary {
+    font-size: 20px;
+    --padding: 13px 15px;
+    height: 45px;
+    opacity: 1;
+  }
+
+  .simple-link {
+    color: var(--ion-color-secondary);
+    font-size: 18px;
+    text-align: center;
+    margin: 10px 0;
+    background: none !important;
+    border-bottom: 2px solid var(--ion-color-secondary);
+    text-transform: uppercase;
+    padding: 5px 0;
+  }
 }
