--- a/src/app/resumen-cita/datos-cita/datos-cita.component.html
+++ b/src/app/resumen-cita/datos-cita/datos-cita.component.html
@@ -1,7 +1,7 @@
 <div class="card">
-  <h4 class="bold"> <ion-icon name="calendar-outline"></ion-icon> {{appData.datosCita.fecha}}</h4>
+  <h4 class="bold"> <ion-icon name="calendar-outline"></ion-icon> {{appData.datosCita.fecha | date:'dd/MMM/yyyy' }}</h4>
   <h5><ion-icon name="location-outline"></ion-icon> {{appData.datosCita.direccion}}</h5>
-  <h5><ion-icon name="time-outline"></ion-icon> {{appData.datosCita.hora_inicial}} - 12:00</h5>
+  <h5><ion-icon name="time-outline"></ion-icon> {{appData.datosCita.hora_inicial | date:'HH:mm'}} - {{appData.datosCita.hora_final | date:'HH:mm'}} </h5>
   <h5><ion-icon name="repeat-outline"></ion-icon> {{appData.datosCita.frecuencia}}</h5>
 </div>
 
