Feat(Se añadio pantalla de detalles de cita para beeworker y se añadio menu especifico de beeworker)

--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -84,3 +84,5 @@
     (onTimeSelected)="onTimeSelected($event)" startHour="8" endHour="20" step="30" startingDayWeek="1">
   </calendar>
 </ion-content>
+
+<app-menu-beeworker [selectedTab]="'agenda'"></app-menu-beeworker>
